--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,68 +4,113 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./js/index.js"></script>
+    <link rel="stylesheet" href={{ url_for('static', path='/css/normalize.css') }}>
+    <link rel="stylesheet" href={{ url_for('static', path='/css/index.css') }}>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src={{ url_for('static', path='/js/index.js') }}></script>
 </head>
 <body>
+    
+   <div class="container">
     <div id="searchPanel">
-        平台名称:
-        <select name="program_name" id="program_name">
-            <option value="1001">123</option>
-            <option value="1002">456</option>
-            <option value="1003">789</option>
-        </select>
-        <span class="products">
-            产品：<input type="text" name="product_name" id="product_name" placeholder="请输入产品名称或者关键字">
-        </span>
-        <button id="searchBtn">搜索</button>
-    </div>
-    <div id="products_list_panel">
-        <table class="baoyun18">
-            <p>产品名称：123131就是很厉害的产品</p>
-            <th>
-                <tr>
-                    <td>pyDesc</td>
-                    <td>insureDesc</td>
-                    <td>首年费率</td>
-                    <td>次年费率</td>
-                </tr>
-            </th>
-            <tbody>
-                <td>30年缴费</td>
-                <td>终身</td>
-                <td>20%</td>
-                <td>30%</td>
-            </tbody>
-        </table>
-        
-        <table class="qixin18">
-            <p>产品名称：qixin18产品</p>
-            <th>
-                <tr>
-                    <td>pyDesc</td>
-                    <td>insureDesc</td>
-                    <td>首年费率</td>
-                    <td>次年费率</td>
-                    <td>次年费率</td>
-                    <td>次年费率</td>
-                    <td>次年费率</td>
-                </tr>
-            </th>
-            <tbody>
-                <td>30年缴费</td>
-                <td>终身</td>
-                <td>20%</td>
-                <td>30%</td>
-                <td>次年费率</td>
-                <td>次年费率</td>
-                <td>次年费率</td>
-            </tbody>
-        </table>
-    </div>
+        <form class="form-inline">
+          <p class="program_title">平台名称:</p>
+          <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Baoyun18
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                <button class="dropdown-item" type="button">Baoyun18</button>
+                <button class="dropdown-item" type="button">Qixin18</button>
+                <button class="dropdown-item" type="button">Niubao100</button>
+              </div>
+            </div>
+          <div class="form-group mb-2">
+            <label for="staticEmail2" class="sr-only">Email</label>
+            <input type="text" readonly class="form-control-plaintext product_title" id="staticEmail2" value="产品名称">
+          </div>
+          <div class="form-group mx-sm-3 mb-2">
+            <label for="inputPassword2" class="sr-only">Password</label>
+            <input type="password" class="form-control search_input" id="inputPassword2" placeholder="请输入产品名称或关键字">
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">搜索</button>
+        </form>
+  </div>
+  <div id="products_list_panel">
+      {% if ProductsData.program_id == 1001 %}
+          {% for product_dict in ProductsData["product_list"] %}
+          <div class="data_table">
+            <p class="product_name">产品名称：{{ product_dict["product_name"]}}</p>
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">No.</th>
+                    <th scope="col">pyDesc</th>
+                    <th scope="col">insure</th>
+                    <th scope="col">first_rate</th>
+                    <th scope="col">second_rate</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  {% for detail in product_dict["details"] %}
+                  <tr>
+                    <th scope="row">{{ loop.index }}</th>
+                    <td>{{ detail["pyDesc"] }}</td>
+                    <td>{{ detail["insureDesc"] }}</td>
+                    <td>{{ detail["first_rate"] }}</td>
+                    <td>{{ detail["second_rate"] }}</td>
+                  </tr>
+                  {% endfor %}
+                </tbody>
+              </table>
+          </div>
+          {% endfor %}
+      {% elif ProductsData["program_id"] == 1002 %}
+          <table class="qixin18">
+              <p>产品名称：qixin18产品</p>
+              <th>
+                  <tr>
+                      <td>pyDesc</td>
+                      <td>insureDesc</td>
+                      <td>首年费率</td>
+                      <td>次年费率</td>
+                      <td>次年费率</td>
+                      <td>次年费率</td>
+                      <td>次年费率</td>
+                  </tr>
+              </th>
+              <tbody>
+                  <td>30年缴费</td>
+                  <td>终身</td>
+                  <td>20%</td>
+                  <td>30%</td>
+                  <td>次年费率</td>
+                  <td>次年费率</td>
+                  <td>次年费率</td>
+              </tbody>
+          </table>
+      {% endif %}
+  </div>
     <div id="pagefoot">
-        <button class="nextPage">上一页</button>
-        <input type="text" name="pageNo" id="pageNo" value="1" class="pageNo">
-        <button class="previousPage">下一页</button>
-    </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+                </li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+                </li>
+            </ul>
+            </nav>
+   </div>
+</div>
 </body>
 </html>
