--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,10 +6,14 @@
     <title>Document</title>
     <link rel="stylesheet" href={{ url_for('static', path='/css/normalize.css') }}>
     <link rel="stylesheet" href={{ url_for('static', path='/css/index.css') }}>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }} integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src={{ url_for('static', path="/js/popper.min.js") }} integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src={{ url_for('static', path="/js/bootstrap.min.js") }} integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
+    <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }}>
+    <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} ></script>
+    <script src={{ url_for('static', path="/js/popper.min.js") }}></script>
+    <script src={{ url_for('static', path="/js/bootstrap.min.js") }}></script>
     <script src={{ url_for('static', path='/js/index.js') }}></script>
 </head>
 <body>
@@ -19,94 +23,82 @@
         <form class="form-inline">
           <p class="program_title">平台名称:</p>
           <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <button class="btn btn-secondary dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" value="1001">
                 Baoyun18
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                <button class="dropdown-item" type="button">Baoyun18</button>
-                <button class="dropdown-item" type="button">Qixin18</button>
-                <button class="dropdown-item" type="button">Niubao100</button>
+                <button class="dropdown-item" type="button" value="1001">Baoyun18</button>
+                <button class="dropdown-item" type="button" value="1002">Qixin18</button>
+                <button class="dropdown-item" type="button" value="1003">Niubao100</button>
+                <button class="dropdown-item" type="button" value="1000">All</button>
               </div>
             </div>
           <div class="form-group mb-2">
-            <label for="staticEmail2" class="sr-only">Email</label>
+            <!-- <label for="staticEmail2" class="sr-only">Email</label> -->
             <input type="text" readonly class="form-control-plaintext product_title" id="staticEmail2" value="产品名称">
           </div>
           <div class="form-group mx-sm-3 mb-2">
-            <label for="inputPassword2" class="sr-only">Password</label>
-            <input type="password" class="form-control search_input" id="inputPassword2" placeholder="请输入产品名称或关键字">
+            <!-- <label for="inputPassword2" class="sr-only">Password</label> -->
+            <input type="text" class="form-control search_input" id="inputPassword2" placeholder="请输入产品名称或关键字">
           </div>
-          <button type="submit" class="btn btn-primary mb-2">搜索</button>
+          <button type="submit" class="btn btn-primary mb-2" id="searchBtn">搜索</button>
         </form>
   </div>
   <div id="products_list_panel">
-      {% if ProductsData.program_id == 1001 %}
-          {% for product_dict in ProductsData["product_list"] %}
-          <div class="data_table">
-            <p class="product_name">产品名称：{{ product_dict["product_name"]}}</p>
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">No.</th>
-                    <th scope="col">pyDesc</th>
-                    <th scope="col">insure</th>
-                    <th scope="col">first_rate</th>
-                    <th scope="col">second_rate</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  {% for detail in product_dict["details"] %}
-                  <tr>
-                    <th scope="row">{{ loop.index }}</th>
-                    <td>{{ detail["pyDesc"] }}</td>
-                    <td>{{ detail["insureDesc"] }}</td>
-                    <td>{{ detail["first_rate"] }}</td>
-                    <td>{{ detail["second_rate"] }}</td>
-                  </tr>
-                  {% endfor %}
-                </tbody>
-              </table>
+    <div class="data_table">
+      {% for product_dict in ProductsList %}
+          <div class="table_title">
+            <p>平台名称：
+              {% if product_dict["program_id"] == 1001 %}
+                Baoyun18
+              {% elif product_dict["program_id"] == 1002 %}
+                Qixin18
+              {% elif product_dict["program_id"] == 1003 %}
+                Niubao100
+              {% else %}
+                Unknown
+              {% endif %}
+            </p>
+            <span class="product_name">产品名称：{{ product_dict["product_name"]}}</span>
+            <button>在全平台搜索此产品</button>
           </div>
-          {% endfor %}
-      {% elif ProductsData["program_id"] == 1002 %}
-          <table class="qixin18">
-              <p>产品名称：qixin18产品</p>
-              <th>
-                  <tr>
-                      <td>pyDesc</td>
-                      <td>insureDesc</td>
-                      <td>首年费率</td>
-                      <td>次年费率</td>
-                      <td>次年费率</td>
-                      <td>次年费率</td>
-                      <td>次年费率</td>
-                  </tr>
-              </th>
+          <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">No.</th>
+                  {% for key in product_dict["details"][0].keys() %}
+                  <th scope="col">{{ key }}</th>
+                  {% endfor %}
+                </tr>
+              </thead>
               <tbody>
-                  <td>30年缴费</td>
-                  <td>终身</td>
-                  <td>20%</td>
-                  <td>30%</td>
-                  <td>次年费率</td>
-                  <td>次年费率</td>
-                  <td>次年费率</td>
+                
+                  {% for details_dict in product_dict["details"] %}
+                    <tr>
+                      <th scope="row">{{ loop.index }}</th>
+                      {% for key, value in details_dict.items() %}  
+                        <td>{{value}}</td>
+                      {% endfor %}
+                    </tr>
+                  {% endfor %}
+                
               </tbody>
-          </table>
-      {% endif %}
+            </table>
+      {% endfor %}
   </div>
     <div id="pagefoot">
         <nav aria-label="Page navigation example">
             <ul class="pagination">
                 <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
+                  <span class="page-link" aria-label="Previous" id="PreviousBtn">
+                      <span aria-hidden="true">&laquo;</span>
+                  </span>
                 </li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#" id="pageNo">1</a></li>
                 <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
+                <span class="page-link" aria-label="Next" id="NextBtn">
                     <span aria-hidden="true">&raquo;</span>
-                </a>
+                </span>
                 </li>
             </ul>
             </nav>
