--- a/webapp/index.html
+++ b/webapp/index.html
@@ -20,7 +20,7 @@
     
    <div class="container">
     <div id="searchPanel">
-        <form class="form-inline">
+        <div class="form-inline">
           <p class="program_title">平台名称:</p>
           <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" value="1001">
@@ -42,7 +42,7 @@
             <input type="text" class="form-control search_input" id="inputPassword2" placeholder="请输入产品名称或关键字">
           </div>
           <button type="submit" class="btn btn-primary mb-2" id="searchBtn">搜索</button>
-        </form>
+        </div>
   </div>
   <div id="products_list_panel">
     <div class="data_table">
