update log print

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -64,7 +64,7 @@
               {% endif %}
             </p>
             <span class="product_name">产品名称：{{ product_dict["product_name"]}}</span>
-            <button>在全平台搜索此产品</button>
+            <!-- <button>在全平台搜索此产品</button> -->
           </div>
           <table class="table">
               <thead>
