--- a/webapp/index.html
+++ b/webapp/index.html
@@ -93,36 +93,40 @@
                   </div>
                 </div>
                 {% for detail_dict in product_dict["details"] %}
-                  {% for keys, values in detail_dict.items() %}
+                  {% for detail_keys, detail_values in detail_dict.items() %}
                     <div class="table-body bordered">
                       <div class="temp-table-context-wrap false undefined">
                         <div class="main-sub">
-                          <span class="main" value="{{values[0]["clauseId"]}}">
-                            {{ values[0]["clauseName"]}}
+                          <span class="main" value="{{detail_values[0]["clauseId"]}}">
+                            {{ detail_values[0]["clauseName"]}}
                           </span>
                         </div>
-                        {% for RateDetail_dict in value %}
-                          {% for rateKey, rateValue in RateDetail_dict.items() %}
+                        {% for RateDetail_dict in detail_values %}
+                          
                             <div class="tree-table">
-                              <div class="factor-col">保至70周岁</div>
+                              <div class="factor-col">{{ RateDetail_dict["rateCodeDescView"] }}</div>
                               <div class="branch-box">
                                 <div class="tree-table">
-                                  <div class="payperiod-col">一次性缴纳</div>
+                                  <div class="payperiod-col">{{ RateDetail_dict["rateCodeDesc"] }}</div>
                                   <div class="branch-box">
                                     <div>
-                                      <div class="tree-table fee-row">
-                                        <div class="fee-td "><div>1.0</div></div>
-                                        <div class="fee-td "><div>1.0</div></div>
-                                        <div class="fee-td "><div>1.0</div></div>
-                                        <div class="fee-td "><div>1.0</div></div>
-                                        <div class="fee-td "><div>1.0</div></div>
-                                      </div>
+                                      {% for rateCode_keys, rateCode_values in RateDetail_dict["rateCodeDesc"] %}
+                                        {% for eachRate in rateCode_values %}
+                                          <div class="tree-table fee-row">
+                                            <div class="fee-td "><div>{{ eachRate["first_rate"] }}</div></div>
+                                            <div class="fee-td "><div>{{ eachRate["second_rate"] }}</div></div>
+                                            <div class="fee-td "><div>{{ eachRate["third_rate"] }}</div></div>
+                                            <div class="fee-td "><div>{{ eachRate["fourth_rate"] }}</div></div>
+                                            <div class="fee-td "><div>{{ eachRate["fifth_rate"] }}</div></div>
+                                          </div>
+                                        {% endfor %}
+                                      {% endfor %}
                                     </div>
                                   </div>
                                 </div>
                               </div>
                             </div>
-                          {% endfor %}
+                          
                         {% endfor %}
                       </div>
                     </div>
