update zhongbao show function

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -106,22 +106,23 @@
                               <div class="factor-col">{{ RateDetail_dict["rateCodeDescView"] }}</div>
                               <div class="branch-box">
                                 <div class="tree-table">
-                                  <div class="payperiod-col">{{ RateDetail_dict["rateCodeDesc"] }}</div>
-                                  <div class="branch-box">
-                                    <div>
-                                      {% for rateCode_keys, rateCode_values in RateDetail_dict["rateCodeDescViewList"].items() %}
-                                        {% for eachRate in rateCode_values %}
-                                          <div class="tree-table fee-row">
-                                            <div class="fee-td "><div>{{ eachRate["first_rate"] }}</div></div>
-                                            <div class="fee-td "><div>{{ eachRate["second_rate"] }}</div></div>
-                                            <div class="fee-td "><div>{{ eachRate["third_rate"] }}</div></div>
-                                            <div class="fee-td "><div>{{ eachRate["fourth_rate"] }}</div></div>
-                                            <div class="fee-td "><div>{{ eachRate["fifth_rate"] }}</div></div>
-                                          </div>
-                                        {% endfor %}
-                                      {% endfor %}
+                                  {% for rateCode_keys, rateCode_values in RateDetail_dict["rateCodeDescViewList"].items() %}
+                                    {% for eachRate in rateCode_values %}  
+                                      <div class="payperiod-col">{{ eachRate["rateCodeDesc"] }}</div>
+                                      <div class="branch-box">
+                                        <div>
+                                              <div class="tree-table fee-row">
+                                                <div class="fee-td "><div>{{ eachRate["first_rate"] }}</div></div>
+                                                <div class="fee-td "><div>{{ eachRate["second_rate"] }}</div></div>
+                                                <div class="fee-td "><div>{{ eachRate["third_rate"] }}</div></div>
+                                                <div class="fee-td "><div>{{ eachRate["fourth_rate"] }}</div></div>
+                                                <div class="fee-td "><div>{{ eachRate["fifth_rate"] }}</div></div>
+                                              </div>
+                                    
                                     </div>
                                   </div>
+                                   {% endfor %}
+                                 {% endfor %}
                                 </div>
                               </div>
                             </div>                          
