update zhongbao show function

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -28,6 +28,8 @@
                   Qixin18
                 {% elif DataDict["program_id"] == 1002 %}
                   Niubao100
+                {% elif DataDict["program_id"] == 1002 %}
+                  Fengqi
                 {% elif DataDict["program_id"] == 1005 %}
                   Zhongbao
                 {% else %}
@@ -38,6 +40,7 @@
                 <button class="dropdown-item" type="button" value="1000">Baoyun18</button>
                 <button class="dropdown-item" type="button" value="1001">Qixin18</button>
                 <button class="dropdown-item" type="button" value="1002">Niubao100</button>
+                <button class="dropdown-item" type="button" value="1004">Fengqi</button>
                 <button class="dropdown-item" type="button" value="1005">Zhongbao</button>
                 <button class="dropdown-item" type="button" value="999">All</button>
               </div>
@@ -64,6 +67,8 @@
                 Qixin18
               {% elif product_dict["program_id"] == 1002 %}
                 Niubao100
+              {% elif product_dict["program_id"] == 1004 %}
+                Fengqi
               {% elif product_dict["program_id"] == 1005 %}
                 Zhongbao
               {% else %}
