--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,6 +12,7 @@
     <script src={{ url_for('static', path="/js/bootstrap.min.js") }} integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }}>
     <link rel="stylesheet" href={{ url_for('static', path='/css/index.css') }}>
+    <link rel="stylesheet" href={{ url_for('static', path='/css/Fengqi.css') }}>
     <link rel="stylesheet" href={{ url_for('static', path='/css/zhongbao.css') }}>
 </head>
 <body>
