update fengqi show function

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -144,7 +144,7 @@
             <div class="el-popover el-popper">
               {% for details_dict in product_dict["details"] %}
                 {% for detail_keys, detail_values in details_dict.items() %}
-                  <table class="yjtablez">
+                  <table class="yjtablez fengqitable">
                     <caption>{{ detail_values[0]["productGrade"] }}</caption>
                     <tr>
                       <td><span>缴费年限</span></td>
