--- a/webapp/index.html
+++ b/webapp/index.html
@@ -29,7 +29,7 @@
                   Qixin18
                 {% elif DataDict["program_id"] == 1002 %}
                   Niubao100
-                {% elif DataDict["program_id"] == 1002 %}
+                {% elif DataDict["program_id"] == 1004 %}
                   Fengqi
                 {% elif DataDict["program_id"] == 1005 %}
                   Zhongbao
@@ -38,14 +38,14 @@
                 {% endif %}
               </button>
               <div class="dropdown-menu" aria-labelledby="dropdownMenu2" id="dropdown-menu">
-                <button class="dropdown-item" type="button" value="1000">Baoyun18</button>
-                <button class="dropdown-item" type="button" value="1001">Qixin18</button>
-                <button class="dropdown-item" type="button" value="1002">Niubao100</button>
-                <button class="dropdown-item" type="button" value="1004">Fengqi</button>
-                <button class="dropdown-item" type="button" value="1005">Zhongbao</button>
-                <button class="dropdown-item" type="button" value="999">All</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="1000">Baoyun18</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="1001">Qixin18</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="1002">Niubao100</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="1004">Fengqi</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="1005">Zhongbao</button>
+                <button class="dropdown-item dropdown-item-platform" type="button" value="999">ALL</button>
               </div>
-            </div>
+          </div>
           <div class="form-group mb-2">
             <!-- <label for="staticEmail2" class="sr-only">Email</label> -->
             <input type="text" readonly class="form-control-plaintext product_title" id="staticEmail2" value="产品名称">
@@ -221,11 +221,35 @@
 			<a class="ant-pagination-item-link"><i aria-label="图标: right" class="anticon anticon-right"><svg viewBox="64 64 896 896" focusable="false" class="" data-icon="right" width="1em" height="1em" fill="currentColor" aria-hidden="true"><path d="M765.7 486.8L314.9 134.7A7.97 7.97 0 0 0 302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 0 0 0-50.4z"></path></svg></i></a>
 		</li>
 		<li class="ant-pagination-options">
+      <div class="dropdown" style="float: left; margin-right: 10px;">
+        <button class="btn btn-secondary dropdown-toggle dropdown-pagesize" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" value="{{ DataDict["pageSize"] }}" style="color:  rgba(0,0,0,.65); border: 1px solid #d9d9d9; background-color: #ffffff; height: 32px; line-height: 20px;">
+          {% if DataDict["pageSize"] == 5 %}
+           5条/页
+          {% elif DataDict["pageSize"] == 10 %}
+           10条/页
+          {% elif DataDict["pageSize"] == 20 %}
+           20条/页
+          {% elif DataDict["pageSize"] == 50 %}
+           50条/页
+          {% elif DataDict["pageSize"] == 100 %}
+           100条/页
+          {% else %}
+           5条/页
+          {% endfor %}
+        </button>
+        <div class="dropdown-menu" aria-labelledby="dropdownMenu3" id="dropdown-menu3">
+          <button class="dropdown-item dropdown-item-pagesize" type="button" value="5">5条/页</button>
+          <button class="dropdown-item dropdown-item-pagesize" type="button" value="10">10条/页</button>
+          <button class="dropdown-item dropdown-item-pagesize" type="button" value="20">20条/页</button>
+          <button class="dropdown-item dropdown-item-pagesize" type="button" value="50">50条/页</button>
+          <button class="dropdown-item dropdown-item-pagesize" type="button" value="100">100条/页</button>
+        </div>
+      </div>
 			<div class="ant-pagination-options-quick-jumper">
 				跳转至
 				<input type="number" name="page_jumper" id="page_jumper" min="1">
 				页
-			</div>
+      </div>
 		</li>
 	</ul>
 </div>
