--- a/webapp/index.html
+++ b/webapp/index.html
@@ -235,7 +235,7 @@
            100条/页
           {% else %}
            5条/页
-          {% endfor %}
+          {% endif %}
         </button>
         <div class="dropdown-menu" aria-labelledby="dropdownMenu3" id="dropdown-menu3">
           <button class="dropdown-item dropdown-item-pagesize" type="button" value="5">5条/页</button>
