--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,10 +10,10 @@
     <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src={{ url_for('static', path="/js/popper.min.js") }} integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src={{ url_for('static', path="/js/bootstrap.min.js") }} integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> -->
-    <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }}>
+    <!-- <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }}>
     <link rel="stylesheet" href={{ url_for('static', path='/css/index.css') }}>
     <link rel="stylesheet" href={{ url_for('static', path='/css/Fengqi.css') }}>
-    <link rel="stylesheet" href={{ url_for('static', path='/css/zhongbao.css') }}>
+    <link rel="stylesheet" href={{ url_for('static', path='/css/zhongbao.css') }}> -->
 </head>
 <body>
     
@@ -253,9 +253,9 @@
 		</li>
 	</ul>
 </div>
-<script src={{ url_for('static', path="/js/jquery.slim.min.js") }} ></script>
+<!-- <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} ></script>
 <script src={{ url_for('static', path="/js/popper.min.js") }}></script>
 <script src={{ url_for('static', path="/js/bootstrap.min.js") }}></script>
-<script src={{ url_for('static', path='/js/index.js') }}></script>
+<script src={{ url_for('static', path='/js/index.js') }}></script> -->
 </body>
 </html>
