--- a/webapp/index.html
+++ b/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href={{ url_for('static', path='/css/normalize.css') }}>
+    <!-- <link rel="stylesheet" href={{ url_for('static', path='/css/normalize.css') }}> -->
     
     <!-- <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }} integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src={{ url_for('static', path="/js/jquery.slim.min.js") }} integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
