--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CLD_PROJECT</title>
     <link rel="stylesheet" href={{ url_for('static', path='/css/normalize.css') }}>
     
     <!-- <link rel="stylesheet" href={{ url_for('static', path='/css/bootstrap.min.css') }} integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -172,28 +172,6 @@
                 {% endfor %}
               {% endfor %}
             </div>
-          {% elif product_dict["program_id"] == 1000 %}
-            <table class="table">
-              <thead>
-                <tr>
-                  <th scope="col">No.</th>
-                  <th scope="col">缴费年限</th>
-                  <th scope="col">保障期限</th>
-                  <th scope="col">首年</th>
-                  <th scope="col">次年</th>
-                </tr>
-              </thead>
-              <tbody>
-                  {% for details_dict in product_dict["data"]["content"] %}
-                    <tr>
-                      <th scope="row">{{ loop.index }}</th>
-                      {% for key, value in details_dict.items() %}  
-                        <td>{ {value }}</td>
-                      {% endfor %}
-                    </tr>
-                  {% endfor %}
-              </tbody>
-            </table>
           {% else %}
             <table class="table">
                 <thead>
